<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>

    <string name="main_search_button">Поиск</string>
    <string name="main_media_library_button">Медиатека</string>
    <string name="main_settings_button">Настройки</string>

    <string name="search_title">Поиск</string>
    <string name="search_hint">Поиск</string>
    <string name="search_search_history_title">Вы искали</string>
    <string name="search_search_history_clear_action">Очистить историю</string>

    <string name="settings_title">Настройки</string>
    <string name="settings_dark_theme_item">Темная тема</string>
    <string name="settings_share_item">Поделиться приложением</string>
    <string name="settings_support_item">Написать в поддержку</string>
    <string name="settings_user_agreement_item">Пользовательское соглашение</string>

    <string name="settings_share_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="settings_user_agreement_link">https://yandex.ru/legal/practicum_offer/</string>

    <string name="settings_support_request_email">grigory.ulanov@yandex.ru</string>
    <string name="settings_support_request_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="settings_support_request_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="error_empty_list_title">Ничего не нашлось</string>

    <string name="error_connection_title">Проблемы со связью</string>
    <string name="error_connection_description">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="error_connection_retry_action">Обновить</string>

    <string name="player_track_time_title">Длительность</string>
    <string name="player_collection_title">Альбом</string>
    <string name="player_release_year_title">Год</string>
    <string name="player_genre_title">Жанр</string>
    <string name="player_country_title">Страна</string>
</resources>