<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingHorizontal="@dimen/margin_xl"
    android:paddingTop="102dp">

    <ImageView
        android:id="@+id/error_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        tools:src="@drawable/ic_connection_error"/>

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:textColor="@color/text_primary"
        android:textAppearance="@style/TextAppearance.PlaylistMaker.Medium19"
        android:textAlignment="center"
        tools:text="@string/error_connection_title"/>

    <TextView
        android:id="@+id/description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xl"
        android:textColor="@color/text_primary"
        android:textAppearance="@style/TextAppearance.PlaylistMaker.Medium19"
        android:textAlignment="center"
        tools:text="@string/error_connection_description"/>

    <Button
        android:id="@+id/action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xl"
        style="@style/Widget.PlaylistMaker.Button.Plain.DayNight"
        tools:text="@string/error_connection_retry_action"/>

</LinearLayout>