<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_accent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/screen_title_on_background_accent"
            android:textSize="@dimen/text_size_l" />

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/margin_l"
        android:layout_marginHorizontal="@dimen/margin_m"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:backgroundTint="@color/content_on_background_accent"
        android:text="@string/main_search_button"
        android:textColor="@color/text_on_content_accent"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_l"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/margin_xs"
        app:iconTint="@color/ic_on_content_accent"
        app:cornerRadius="@dimen/corner_radius_m" />

    <Button
        android:id="@+id/media_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/margin_m"
        android:layout_marginHorizontal="@dimen/margin_m"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:backgroundTint="@color/content_on_background_accent"
        android:text="@string/main_media_library_button"
        android:textColor="@color/text_on_content_accent"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_l"
        app:icon="@drawable/ic_media_library"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/margin_xs"
        app:iconTint="@color/ic_on_content_accent"
        app:cornerRadius="@dimen/corner_radius_m"/>

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/margin_m"
        android:layout_marginBottom="@dimen/margin_xl"
        android:layout_marginHorizontal="@dimen/margin_m"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:backgroundTint="@color/content_on_background_accent"
        android:text="@string/main_settings_button"
        android:textColor="@color/text_on_content_accent"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_l"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/margin_xs"
        app:iconTint="@color/ic_on_content_accent"
        app:cornerRadius="@dimen/corner_radius_m"/>

</LinearLayout>