<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_primary">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            style="@style/Widget.PlaylistMaker.Button.Back.DayNight"/>

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_title"
            android:textColor="@color/screen_title"
            android:textAppearance="@style/TextAppearance.PlaylistMaker.Medium22" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_l"
        android:orientation="horizontal">
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_m"
            android:layout_marginVertical="21dp"
            style="@style/Widget.PlaylistMaker.TextView.List"
            android:text="@string/settings_dark_theme_item"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_s"
            android:layout_marginEnd="@dimen/margin_xxs"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_m"
            android:layout_marginVertical="21dp"
            style="@style/Widget.PlaylistMaker.TextView.List"
            android:text="@string/settings_share_item"/>
        
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="@dimen/margin_s"
            style="@style/Widget.PlaylistMaker.ImageView.List.DayNight"
            android:src="@drawable/ic_share"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_m"
            android:layout_marginVertical="21dp"
            style="@style/Widget.PlaylistMaker.TextView.List"
            android:text="@string/settings_support_item"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="@dimen/margin_s"
            style="@style/Widget.PlaylistMaker.ImageView.List.DayNight"
            android:src="@drawable/ic_support"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_m"
            android:layout_marginVertical="21dp"
            style="@style/Widget.PlaylistMaker.TextView.List"
            android:text="@string/settings_support_item"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="@dimen/margin_s"
            style="@style/Widget.PlaylistMaker.ImageView.List.DayNight"
            android:src="@drawable/ic_arrow_forward"/>

    </LinearLayout>

</LinearLayout>